# api/routes/web.php
@@ -4,8 +4,8 @@ use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\QuizController;
 
 Route::group(['prefix' => 'quiz'], function () {
-    Route::post('/create', [QuizController::class, 'create']);
-    Route::delete('/delete', [QuizController::class, 'delete']);
+    Route::post('/', [QuizController::class, 'create']);
+    Route::delete('/', [QuizController::class, 'delete']);
     Route::post('/correct', [QuizController::class, 'correct']);
     Route::post('/omr_errors_resolved', [QuizController::class, 'omr_errors_resolved']);
 
